@@ -1,13 +1,13 @@
 % File src/library/tools/man/toTitleCase.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 2015 R Core Team
+% Copyright 2015--2024 R Core Team
 % Distributed under GPL 2 or later
 
 \name{toTitleCase}
 \alias{toTitleCase}
 \title{Convert Titles to Title Case}
 \description{
-  Convert a character vector to title case, especially package titles.
+  Convert a character vector to title case for English, especially package titles.
 }
 \usage{
 toTitleCase(text)
@@ -18,7 +18,7 @@ toTitleCase(text)
 \details{
   This is intended for English text only.
 
-  No definition of\sQuote{title case} is universally accepted: all agree
+  No definition of \sQuote{title case} is universally accepted: all agree
   that \sQuote{principal} words are capitalized and common words like
   \sQuote{for} are not, but not which words fall into each category.
 
@@ -32,4 +32,16 @@ toTitleCase(text)
 }
 \value{
   A character vector of the same length as \code{text}, without names.
+}
+\examples{
+toTitleCase("bayesian network modeling and analysis")
+toTitleCase("ensemble tool for predictions from species distribution models")
+## Treatment after "-":
+toTitleCase("small- and large-scale analysis") # lowercase "and"
+
+toTitleCase("a small fox is jumping")    # "a Small Fox is .."     (the 'a' may change)% i.e. BUG
+toTitleCase("is a small fox jumping?")   # "Is a Small Fox .."     (fine)
+## After ":", start a new sentence
+toTitleCase("a pangram: the quick brown fox jumps over the lazy dog")
+toTitleCase("asking -- 'is a small fox jumping?'") # ".. -- Is a Small ..."     (fine)
 }
